# pelagos

./: .gitignore  .lldbinit  CHANGELOG.md  CLAUDE.md  CLEANUP_AND_SCRIPTS.md  CURRENT_PROGRESS.md  Cargo.toml  INSTALL.md  MOUNT_LEAK_FIXED.md  NAMESPACE_JOINING_ISSUE.md  ONGOING_TASKS.md  PHASE2_COMPLETE.md  PHASE3_FEATURES_COMPLETE.md  PHASE3_NAMESPACE_JOINING_COMPLETE.md  README.md  READONLY_ROOTFS.md  ROOTFS_COMPARISON.md  TESTING_GUIDE.md  cleanup-mounts.sh  fix-rootfs.sh  force-unmount.sh  launch-container.sh  launch.sh  run-integration-tests.sh  setup.sh  test-mount-fix.sh  test-namespace-join.sh
.cargo/: config.toml
.githooks/: pre-commit
ci/: registries.toml
docs/: ACCESS_PATTERNS.md  AUR_PUBLISHING.md  BUILD_ROOTFS.md  CGROUPS.md  CI_INFRASTRUCTURE.md  CLI_DEFAULTS.md  CRI_COMPLIANCE.md  DEPENDENCY_REPLACEMENT_ANALYSIS.md  DESIGN_PRINCIPLES.md  E2E_TEST_PLAN.md  EMBEDDED_DNS.md  FEATURE_GAPS.md  HOME_MONITORING_CONFIG_NOTES.md  HOME_MONITORING_STACK.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_COMPLETE.md  IPV6_HOST_FORWARDING.md  ISSUE_361_ERAMAX_Z8S.md  MACOS_APPLE_SILICON.md  MULTI_NETWORK.md  OCI_CONFORMANCE.md  ONGOING_TASKS.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PID_NAMESPACE_ISSUE.md  PTY_DEEP_DIVE.md  REGISTRY_MIRRORS.md  REML_EXECUTOR_MODEL.md  ROADMAP.md  RUNTIME_COMPARISON.md  RUNTIME_STRATEGY_2026.md  SECCOMP_DEEP_DIVE.md  SECURITY.md  TESTING.md  TUTORIAL.md  USER_GUIDE.md  VOLUMES_MOUNTS_OVERLAYS.md  WATCHER_PROCESS_MODEL.md  ZOT_MIRROR_SETUP.md
examples/: secure_container.rs
infra/: registries.toml
pelagos-cri/: Cargo.toml  build.rs  pelagos-cri-agent.service  pelagos-cri-server.service  pelagos.slice
pelagos-cri/src/: cni.rs  image.rs  invoke.rs  main.rs  runtime.rs  scope.rs  state.rs  streaming.rs
pelagos-dockerd/: Cargo.toml
pelagos-dockerd/src/handlers/: containers.rs
scripts/: analyze-teardown-log.sh  bench-coldstart.sh  bench-results.md  build-rootfs-docker.sh  build-rootfs-tarball.sh  check-monitoring.sh  cleanup-fuse-overlayfs.sh  cluster-build.sh  cri-confirm-ns.sh  cri-conformance-341.sh  cri-conformance-343.sh  cri-conformance-353.sh  cri-conformance-354-355.sh  cri-conformance-356.sh  cri-conformance-386.sh  cri-conformance-394.sh  cri-conformance-398.sh  cri-conformance-focus.sh  cri-diag-sandbox.sh  cri-diag-usergroup.sh  (+41 more)
(+127 files in other folders)
