[package]
name = "remora"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
subprocess = "*"
cgroups-fs = "*"
nix = { version = "0.31.1", features = ["process", "sched", "mount", "fs"] }
palaver = "*"
libc = "*"
clap = {version = "3.1.6", features = ["derive"] }
thiserror = "2.0"
bitflags = "2.6"
# sys-mount = "1.3.0"