[package]
name = "pelagos-dockerd"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Docker Engine API shim that delegates to the pelagos CLI"
license = "Apache-2.0"

[[bin]]
name = "pelagos-dockerd"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "io-util", "process", "fs", "macros", "signal"] }
axum = "0.7"
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
inotify = { version = "0.10", features = ["stream"] }
